--- a/DayDaily/MainWindow.xaml
+++ b/DayDaily/MainWindow.xaml
@@ -36,6 +36,9 @@
             <DataTemplate DataType="{x:Type vm:UserViewModel}">
                 <vw:UserView />
             </DataTemplate>
+            <DataTemplate DataType="{x:Type vm:StatisticsViewModel}">
+                <vw:StatisticsView />
+            </DataTemplate>
             <ctrls:MainViewDataTemplateSelector x:Key="mainViewDataTemplateSelector" />
         </ResourceDictionary>
     </Window.Resources>
